--- a/FaPA/GUI/Design/Templates/DatiAnagraficiCedente.xaml
+++ b/FaPA/GUI/Design/Templates/DatiAnagraficiCedente.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="FaPA.GUI.Design.Templates.DatiAnagrafici"
+﻿<UserControl x:Class="FaPA.GUI.Design.Templates.DatiAnagraficiCedente"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:t="clr-namespace:FaPA.GUI.Design.Templates">
@@ -14,7 +14,7 @@
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
-        <GroupBox Header="Anagrafica" Grid.Row="0" Grid.Column="0"  Margin="2,2,2,2" Padding="2,2,2,2">
+        <GroupBox Header="Anagrafica cedente fornitore" Grid.Row="0" Grid.Column="0"  Margin="2,2,2,2" Padding="2,2,2,2">
 
             <Border BorderThickness="1" Margin="2,2,2,2" Padding="2,2,2,2" >
 
