--- a/FaPA/GUI/Design/Templates/DettagliFattura.xaml
+++ b/FaPA/GUI/Design/Templates/DettagliFattura.xaml
@@ -38,7 +38,7 @@
 
     </UserControl.Resources>
 
-    <Grid >
+    <Grid Margin="2,5,2,2">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
@@ -54,7 +54,7 @@
                                         ActionCommandMessage="Aggiungi una riga di dettaglio"
                                         OnNullCommand="{Binding AddItemCommand}"/>
 
-        <DockPanel HorizontalAlignment="Stretch" Focusable="False" Grid.Row="1">
+        <DockPanel HorizontalAlignment="Stretch" Focusable="False" Grid.Row="1" Margin="2,2,2,2">
             <DataGrid x:Name="DettagliFatturaGridControl" 
                         ItemsSource="{Binding Path=DettagliFatturaViewModel.UserCollectionView, NotifyOnSourceUpdated=True, 
                                                    NotifyOnTargetUpdated=True, UpdateSourceTrigger=PropertyChanged}"
